// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > should render 1`] = `
<div>
  <button
    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 green:hover:bg-theme-primary-700 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button > should render a large one 1`] = `
<div>
  <button
    class="px-6 py-4 space-x-4 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 green:hover:bg-theme-primary-700 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button > should render a small one 1`] = `
<div>
  <button
    class="px-3 py-2 space-x-2 text-sm relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 green:hover:bg-theme-primary-700 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button > should render an icon 1`] = `
<div>
  <button
    class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 green:hover:bg-theme-primary-700 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button > should render as danger button 1`] = `
<div>
  <button
    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 disabled:cursor-not-allowed bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:text-white hover:bg-theme-danger-400 hover:text-white dark:hover:bg-theme-danger-300 focus:ring-theme-danger-300"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button > should render as info button 1`] = `
<div>
  <button
    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 disabled:cursor-not-allowed bg-theme-info-100 text-theme-info-600 dark:bg-theme-info-600 dark:text-white hover:bg-theme-info-700 hover:text-white focus:ring-theme-info-300"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button > should render as primary button 1`] = `
<div>
  <button
    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 green:hover:bg-theme-primary-700 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button > should render as reverse button 1`] = `
<div>
  <button
    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 disabled:cursor-not-allowed bg-theme-primary-reverse-100 text-theme-primary-reverse-600 dark:bg-theme-primary-reverse-600 dark:text-white hover:bg-theme-primary-reverse-700 hover:text-white focus:ring-theme-primary-reverse-300"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button > should render as secondary button 1`] = `
<div>
  <button
    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button > should render as transparent button 1`] = `
<div>
  <button
    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button > should render as warning button 1`] = `
<div>
  <button
    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 disabled:cursor-not-allowed bg-theme-warning-100 text-theme-warning-700 dark:bg-theme-warning-600 dark:text-white hover:bg-theme-warning-700 hover:text-white focus:ring-theme-warning-300"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button > should render if disabled 1`] = `
<DocumentFragment>
  <button
    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700"
    data-testid="Button"
    disabled=""
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    >
      Click
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button > should render loading with icon 1`] = `
<div>
  <button
    class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 green:hover:bg-theme-primary-700 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    >
      <div
        class="flex items-center"
      >
        <span
          class="invisible flex items-center space-x-2"
        >
          <div
            class="css-v0ob3f"
            height="16"
            width="16"
          />
        </span>
        <div
          class="absolute left-0 top-0 flex h-full w-full items-center justify-center"
        >
          <div
            class="css-1nn240v"
          />
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`Button > should render with icon and custom icon size 1`] = `
<div>
  <button
    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 green:hover:bg-theme-primary-700 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    >
      <div
        class="css-1i4b0eq"
        height="20"
        width="20"
      >
        <svg
          id="plus"
          viewBox="0 0 20 20"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <g
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          >
            <path
              d="M1 10h18M10 1v18"
            />
          </g>
        </svg>
      </div>
      Click Me
    </div>
  </button>
</div>
`;

exports[`Button > should render with icon on the left side 1`] = `
<div>
  <button
    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 green:hover:bg-theme-primary-700 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    >
      <div
        class="css-v0ob3f"
        height="16"
        width="16"
      >
        <svg
          id="plus"
          viewBox="0 0 20 20"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <g
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          >
            <path
              d="M1 10h18M10 1v18"
            />
          </g>
        </svg>
      </div>
      Click Me
    </div>
  </button>
</div>
`;

exports[`Button > should render with icon on the right side 1`] = `
<div>
  <button
    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 green:hover:bg-theme-primary-700 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    >
      Click Me
      <div
        class="css-v0ob3f"
        height="16"
        width="16"
      >
        <svg
          id="plus"
          viewBox="0 0 20 20"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <g
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          >
            <path
              d="M1 10h18M10 1v18"
            />
          </g>
        </svg>
      </div>
    </div>
  </button>
</div>
`;

exports[`Button > should render with loading state enabled 1`] = `
<div>
  <button
    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 green:hover:bg-theme-primary-700 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500"
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    >
      <div
        class="flex items-center"
      >
        <span
          class="invisible flex items-center space-x-2"
        >
          Click Me
        </span>
        <div
          class="absolute left-0 top-0 flex h-full w-full items-center justify-center"
        >
          <div
            class="css-1nn240v"
          />
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`Button > should render with theme 1`] = `
<DocumentFragment>
  <button
    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-800 disabled:text-theme-secondary-700"
    data-testid="Button"
    disabled=""
    type="button"
  >
    <div
      class="flex items-center space-x-2"
    >
      Click
    </div>
  </button>
</DocumentFragment>
`;
